2008-07-23  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* include/exmpp.hrl: Add a string version of the Ad-Hoc commands
	namespace. Other namespaces will follow as needed.

	* c_src/extract-known-from-specs, c_src/make-specs-list,
	c_src/extract-known-from-schemas, c_src/make-schemas-urls-list,
	c_src/Makefile.am: Rewrite scripts that fetch and extract official
	namespaces and their element and attribute names. The new scripts are
	now based on the HTML XEP list available here:
	http://www.xmpp.org/extensions/all.shtml
	This list is a lot more up-to-date.

	* c_src/xmpp_ns.h.in-local, c_src/xmpp_names.h.in-local,
	c_src/xmpp_attrs.h.in-local: Removed obsolete templates, now that the
	new scripts understand DTDs.

	* c_src/xmpp_ns.h.in, c_src/xmpp_names.h.in, c_src/xmpp_attrs.h.in:
	Update known lists using the new scripts.

2008-07-21  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_xml.erl (get_path): Accept 'cdata_as_list' as a path
	component. Character data are returned as list (instead of binary)
	obviously.

	* src/core/exmpp_presence.erl: Add functions to create subscribe,
	subscribed, unsubscribe, unsubscribed and error presence stanzas. Add
	a function to set the type of a presence stanza.

	* src/core/exmpp_jid.erl: Export functions to make a JID string from
	given node, domain and resource arguments.

	* src/core/exmpp_iq.erl (result): Accept a list of results to put in
	an IQ.

2008-07-17  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* include/exmpp.hrl: Add XBOSH common prefix.

	* src/core/exmpp_xml.erl (node_to_list): Guarantee that the returned
	list is flat. To achieve this, lists:append/1 is used to concatenate
	lists.

	* c_src/exmpp_xml_expat.c, src/core/exmpp_xml.erl
	(forward_declare_ns/3): Elements with xmlns="" (empty default
	namespace) are legal. After reading "XML 1.0" and "Namespaces for XML
	1.0" (which I'm not sure I understand very well), it means that the